chore: setup docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.url=jdbc:postgresql://db:5432/postgres
+spring.datasource.username=admin-sidha
+spring.datasource.password=propenzjaya-d01
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.main.allow-circular-references=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+sidha.app.jwtSecret=sidhaSecretKey
+sidha.app.jwtExpirationMs=86400000
