--- a/build.gradle
+++ b/build.gradle
@@ -29,19 +29,25 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'org.postgresql:postgresql'
-    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.3'
-    implementation 'org.mapstruct:mapstruct:1.5.0.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.0.Final'
-    implementation ('com.github.javafaker:javafaker:1.0.2') { exclude module: 'org.yaml' }
-    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.26'
-    implementation 'com.fasterxml.jackson.core:jackson-databind'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+  runtimeOnly 'org.postgresql:postgresql'
+  implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.3'
+	implementation 'org.mapstruct:mapstruct:1.5.0.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.0.Final'
+	implementation ('com.github.javafaker:javafaker:1.0.2') { exclude module: 'org.yaml' }
+	implementation group: 'org.yaml', name: 'snakeyaml', version: '1.26'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api-parent:4.0.0'
 	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.2'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+  implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	implementation 'org.modelmapper:modelmapper:3.2.0'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    testImplementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2', 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+
 }
 
 tasks.named('test') {
