--- a/build.gradle
+++ b/build.gradle
@@ -44,10 +44,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
-    testImplementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2', 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-
-
+	testImplementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2', 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.3'
 }
 
 tasks.named('test') {
