--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - db
     networks:
       - backend-network
+    platform: linux/amd64
   db:
     image: postgres:14-alpine
     ports:
