--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.1'
 	implementation 'org.springframework:spring-context-support:6.1.3'
 	implementation 'jakarta.mail:jakarta.mail-api:2.1.2'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+	implementation 'com.google.code.gson:gson:2.7'
 }
 
 tasks.named('test') {
