Pbi 4 mendaftarkan karyawan dan sopir oleh admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,9 @@ spring.mail.password=ctzpsulxjmalwkzq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-app.image.url=http://34.66.116.60:10001/api/image/ 
+app.image.dir="C:\\Users\\User\\Desktop\\filedata\\"
+app.image.url=http://localhost:8080/api/image/ 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
