--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.mail.password=ctzpsulxjmalwkzq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-app.image.dir="C:\\Users\\User\\Desktop\\filedata\\"
-app.image.url=http://localhost:8080/api/image/ 
+app.image.dir=/home/nur_fajar11/imagedata/
+app.image.url=https://sidha.nurfajar.me/api
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
