--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,17 @@ spring.mail.password=ctzpsulxjmalwkzq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-app.image.dir=/home/nur_fajar11/imagedata/
-app.image.url=https://sidha.nurfajar.me/api
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
+app.image.url = https://sidha.nurfajar.me/api/file/
+
+kontrak.folder.path=/home/nur_fajar11/filedata/
+# kontrak.folder.path=E:/filedata/
+
+image.folder.path=/home/nur_fajar11/imagedata/
+# image.folder.path=E:/filedata/
+
+# server.port=8081
