--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
-
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 app.image.url = https://sidha.nurfajar.me/api/file/
 
 kontrak.folder.path=/home/nur_fajar11/filedata/
