--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
- spring.datasource.url=jdbc:postgresql://db:5432/postgres
+ spring.datasource.url=jdbc:postgresql://localhost:15001/postgres
  spring.datasource.username=admin-sidha
  spring.datasource.password=propenzjaya-d01
  spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
