feat: add history unggah/edit bukti bongkar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
- spring.datasource.url=jdbc:postgresql://localhost:15001/postgres
+ spring.datasource.url=jdbc:postgresql://db:5432/postgres
  spring.datasource.username=admin-sidha
  spring.datasource.password=propenzjaya-d01
  spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -24,8 +24,8 @@
 kontrak.folder.path=/home/nur_fajar11/imagedata/
 # kontrak.folder.path=E:/filedata/
 
-# image.folder.path=/home/nur_fajar11/imagedata/
-  image.folder.path=/Users/devina.hana/Documents/College/term 6/propensi/imagedata/
+image.folder.path=/home/nur_fajar11/imagedata/
+#  image.folder.path=/Users/devina.hana/Documents/College/term 6/propensi/imagedata/
 
 
 # server.port=8081
