--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.3'
 services:
-  web:
+  web_be:
+    container_name: web_be
     build: 
       context: .
     restart: always
@@ -9,12 +10,10 @@ services:
     volumes:
       - ./file-storage:/file-storage
       - ./log:/log
-      - /home/nur_fajar11/filedata:/home/nur_fajar11/filedata
-      - /home/nur_fajar11/imagedata:/home/nur_fajar11/imagedata
+      - /home/devinahaz/filedata:/home/devinahaz/filedata
+      - /home/devinahaz/imagedata:/home/devinahaz/imagedata
     depends_on:
       - db
-    networks:
-      - backend-network
     platform: linux/amd64
   db:
     image: postgres:14-alpine
@@ -26,11 +25,26 @@ services:
       - POSTGRES_PASSWORD=propenzjaya-d01
     volumes:
       - db:/var/lib/postgresql/data
-    networks:
-      - backend-network
+  nginx:
+    container_name: nginx
+    image: nginx:latest
+    ports:
+      - "80:80"  # Map HTTP port 80 on the host to port 80 in the Nginx container
+      - "443:443"  # Map HTTPS port 443 on the host to port 443 in the Nginx container
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf  # Mount custom Nginx configuration file
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    depends_on:
+      - web_be
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --keep-until-expiring --email devinahaz@gmail.com -d sidha-backend.site --agree-tos
+
 volumes:
   db:
     driver: local
-networks:
-  backend-network:
-    driver: bridge  
