--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - /home/devinahaz/imagedata:/home/devinahaz/imagedata
     depends_on:
       - db
+    environment:
+      - TZ=Asia/Jakarta
     platform: linux/amd64
   db:
     image: postgres:14-alpine
@@ -23,6 +25,7 @@ services:
     environment:
       - POSTGRES_USER=admin-sidha
       - POSTGRES_PASSWORD=propenzjaya-d01
+      - TZ=Asia/Jakarta
     volumes:
       - db:/var/lib/postgresql/data
   nginx:
