--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -20,5 +20,5 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-kontrak.folder.path=${FILEPATH_PROD}
-image.folder.path=${FILEPATH_PROD}
+kontrak.folder.path=${FOLDERPATH_PROD}
+image.folder.path=${FOLDERPATH_PROD}
